# thales

./: .hlint.yaml  LICENSE  README.md  TODO.md  cabal.ghc-8.6.5.project  cabal.ghc-8.6.5.project.freeze  cabal.ghc-8.8.3.profiling.project  cabal.ghc-8.8.3.project  cabal.ghc-8.8.3.project.freeze  cabal.ghc-8.8.project  cabal.ghc-8.8.project.freeze  cabal.project  cabal.project.freeze  hie.yaml  stack-ghc-8.6.yaml  stack-ghc-8.8.yaml  stack.ghc-8.8.yaml  thales.cabal
.github/workflows/: main.yml
applicative-transformers/Control/Applicative/Trans/: Class.hs  Reader.hs  Validation.hs  Writer.hs
applicative-writer/Control/Applicative/: Writer.hs
basemonad-io/: BaseMonad.hs
basemonad/action/: BaseMonad.hs
basemonad/io/: BaseMonad.hs
list-seq/: List.hs
list-sig/: List.hsig
list-vector/: List.hs
main/: Main.hs  Shake.hs
semantics/: BaseMonad.hsig  Display.hs  Eval.hs  Function.hs  List.hsig  Output.hs  Value.hs
semantics/Eval/: Bindings.hs  Expr.hs  Statement.hs
shake/: Shake.hs
sources/: BaseMonad.hs  Bindings.hs  Configuration.hs  DependencyMonad.hs  DependencyMonad.hs-boot  Display.hs  Error.hs  Eval.hs  Function.hs  KnownFunction.hs  List.hs  NonEmptyText.hs  Output.hs  Parse.hs  Problem.hs  Syntax.hs  Value.hs
sources/DependencyMonad/: Class.hs
sources/Eval/: Expr.hs  Function.hs  Problem.hs  Statement.hs
sources/Syntax/: Display.hs
src/: BaseMonad.hsig  Display.hs  Eval.hs  NonEmptyText.hs  Parse.hs  Syntax.hs  Value.hs
syntax/: NonEmptyText.hs  Parse.hs  Syntax.hs  Value.hs  Verbatim.hs
tests/: Parsing.hs
tests-e/: Evaluation.hs
tests/eval/: Evaluation.hs
tests/everything/: Main.hs
tests/everything/golden/: for-var.tpl  for.tpl  optionally.tpl
tests/everything/golden/optionally/: present.out  present.yaml
tests/golden/: Main.hs
tests/golden/files/: append-inline-list.out  append-inline-list.tpl  append-inline-text.tpl  for-var.tpl  for-var.yaml  for.out  include-body.out  include-body.tpl  let-shadowing.out  let-shadowing.tpl  let-standalone.out  let-standalone.tpl  list-directory.out  list-directory.tpl  optionally-absent.out  optionally-absent.tpl  optionally-absent.yaml  optionally-present.tpl  provide-given.out  provide-given.tpl  provide.out  provide.tpl  string-escaping.out  string-escaping.tpl  url-function.out  url-function.tpl  yaml-simple.out  yaml-simple.tpl  yaml-simple.yaml
tests/golden/files/include-body/: body.tpl
tests/golden/files/provide/: name.tpl
tests/golden/files/provide-given/: adjectives.tpl
tests/parse/: Parsing.hs
