cabal-version:       2.2
name:                thales
version:             0.2.0.0
license:             MIT
license-file:        LICENSE
author:              Alan Rempel <alan.rempel@gmail.com>
maintainer:          alan.rempel@gmail.com
build-type:          Simple
extra-doc-files:     README.md
tested-with:         GHC == 8.6.5, GHC == 8.8.3
homepage:            https://github.com/parsonyorick/thales-templating
synopsis:            A nice and very simple textual templating system
category:            Text
description:
  A nice and very simple textual templating system, sort of like Mustache
  or Jinja2.
  .
  Hmmm, I should write more here!
  .
  See the README.md (<https://github.com/parsonyorick/thales-templating#readme) for more info.

source-repository head
  location: https://github.com/parsonyorick/thales-templating
  type: git

common stuff
  build-depends:
      base >= 4.8 && < 4.14
    , relude >= 0.6 && < 0.7
  mixins:
      relude (Relude as Prelude)
    , base hiding (Prelude)
  default-language:    Haskell2010
  default-extensions:
      OverloadedStrings
    , DerivingStrategies
    , GeneralizedNewtypeDeriving
    , StandaloneDeriving
    , DeriveFunctor
    , DeriveGeneric
    , DeriveAnyClass
    , MultiParamTypeClasses
    , RankNTypes
    , LambdaCase
    , GADTs
    , RecordWildCards
    , NamedFieldPuns
    , DefaultSignatures
    , KindSignatures
    , StrictData
    , ScopedTypeVariables

library
  import:          stuff
  hs-source-dirs:  sources
  exposed-modules:
      BaseMonad
    , Bindings
    , Display
    , Eval
    , NonEmptyText
    , Output
    , Parse
    , Syntax
    , Value
  other-modules:
      Eval.Expr
    , Eval.Statement
  build-depends:
    , applicative-transformers
    , bytestring >= 0.10.8 && < 0.11
    , directory
    , dlist ^>= 0.8
    , list-sig
    , megaparsec >= 8.0 && < 9.0
    , parser-combinators >= 0.4
    , prettyprinter >= 1.3 && < 1.7
    , scientific >= 0.3.5.2 && < 0.4
    , text >= 1.2.2 && < 1.3
    , transformers >= 0.5 && < 0.6
    , unordered-containers
    , validation >= 1 && < 2

library thales-shake
  import:           stuff
  hs-source-dirs:   shake
  build-depends:    thales, shake >= 0.18 && < 0.19
  exposed-modules:  Shake

library applicative-transformers
  hs-source-dirs:   applicative-transformers
  exposed-modules:
      Control.Applicative.Trans.Reader
    , Control.Applicative.Trans.Writer
  build-depends:
      base >= 4.8 && < 4.14
    , transformers >= 0.5 && < 0.6
  default-language: Haskell2010

library list-sig
  hs-source-dirs:   list-sig
  signatures:       List
  build-depends:    base >= 4.8 && < 4.14
  default-language: Haskell2010

library list-seq
  import:         stuff
  hs-source-dirs: list-seq
  build-depends:
      containers >= 0.6 && < 0.7
  exposed-modules: List

library list-vector
  hs-source-dirs:  list-vector
  build-depends:   base, vector >= 0.12 && < 0.13
  exposed-modules: List
  default-language: Haskell2010

test-suite parsing
  import:         stuff
  type:           exitcode-stdio-1.0
  hs-source-dirs: tests/parse
  main-is:        Parsing.hs
  build-depends:
      thales
    , list-vector
    , hspec >= 2.5 && < 3
    , hspec-megaparsec >= 2.1 && < 3
    , megaparsec

test-suite evaluation
  import:         stuff
  type:           exitcode-stdio-1.0
  hs-source-dirs: tests/eval
  main-is:        Evaluation.hs
  build-depends:
      thales
    , list-vector
    , bytestring >= 0.10.8 && < 0.11
    , megaparsec
    , hspec >= 2.5 && < 3
    , unordered-containers

test-suite everything
  import:         stuff
  type:           exitcode-stdio-1.0
  hs-source-dirs: tests/everything
  main-is:        Main.hs
  build-depends:
      thales
    , list-vector
    , bytestring >= 0.10.8 && < 0.11
    , directory >= 1.3.2.2 && < 1.4
    , filepath >= 1.4 && < 2.0
    , megaparsec
    , tasty >= 1.1.0.3 && < 2.0
    , tasty-golden >= 2.3 && < 2.4
    , text
    , unordered-containers
    , yaml >= 0.11.1.2 && < 0.12
