cabal-version:       2.2
name:                thales
version:             0.3.0.0
license:             MIT
license-file:        LICENSE
author:              Alan Rempel <alan.rempel@gmail.com>
maintainer:          alan.rempel@gmail.com
build-type:          Simple
extra-doc-files:     README.md
tested-with:         GHC == 8.6.5, GHC == 8.8.3
homepage:            https://github.com/parsonyorick/thales-templating
synopsis:            A nice and very simple textual templating system
category:            Text
description:
  A nice and very simple textual templating system, sort of like Mustache
  or Jinja2.
  .
  Hmmm, I should write more here!
  .
  See the README.md (<https://github.com/parsonyorick/thales-templating#readme) for more info.

source-repository head
  location: https://github.com/parsonyorick/thales-templating
  type: git

common stuff
  build-depends:
      base >= 4.8 && < 4.14
    , relude >= 0.6 && < 0.7
  mixins:
      relude (Relude as Prelude)
    , base hiding (Prelude)
  default-language:    Haskell2010
  default-extensions:
      OverloadedStrings
    , DerivingStrategies
    , GeneralizedNewtypeDeriving
    , StandaloneDeriving
    , DeriveFunctor
    , DeriveGeneric
    , DeriveAnyClass
    , MultiParamTypeClasses
    , RankNTypes
    , LambdaCase
    , GADTs
    , RecordWildCards
    , NamedFieldPuns
    , DefaultSignatures
    , KindSignatures
    , StrictData
    , ScopedTypeVariables
    , TupleSections
    , TypeFamilies

executable thales
  import:         stuff
  hs-source-dirs: main
  main-is:        Main.hs
  ghc-options:    -threaded -rtsopts "-with-rtsopts=-I0 -qg"
  build-depends:
      core
    , directory
    , optparse-applicative >= 0.14 && < 0.16
    , parser-combinators
    , shake >= 0.18 && < 0.19
    , text >= 1.2.2 && < 1.3

library core
  import:          stuff
  hs-source-dirs:  sources
  exposed-modules:
      DependencyMonad
    , Bindings
    , Display
    , Eval
    , List
    , NonEmptyText
    , Output
    , Parse
    , Syntax
    , Value
  other-modules:
      Eval.Expr
    , Eval.Statement
  build-depends:
    , applicative-transformers
    , binary >= 0.8.6 && < 0.9
    , binary-instances
    , bytestring >= 0.10.8 && < 0.11
    , directory
    , dlist ^>= 0.8
    , filepath >= 1.4 && < 1.5
    , foldl >= 1.3 && < 1.5
    , lucid
    , megaparsec >= 8.0 && < 9.0
    , mmark >= 0.0.7.2 && < 0.0.8
    , modern-uri
    , parser-combinators >= 0.4
    , prettyprinter >= 1.3 && < 1.7
    , scientific >= 0.3.5.2 && < 0.4
    , shake >= 0.18 && < 0.19
    , text >= 1.2.2 && < 1.3
    , transformers >= 0.5 && < 0.6
    , unordered-containers
    , vector >= 0.12 && < 0.13
    , yaml >= 0.11.1.2 && < 0.12

library applicative-transformers
  hs-source-dirs:   applicative-transformers
  exposed-modules:
      Control.Applicative.Trans.Class
    , Control.Applicative.Trans.Reader
    , Control.Applicative.Trans.Validation
    , Control.Applicative.Trans.Writer
  build-depends:
      base >= 4.8 && < 4.14
    , transformers >= 0.5 && < 0.6
  default-language: Haskell2010

test-suite parsing
  import:         stuff
  type:           exitcode-stdio-1.0
  hs-source-dirs: tests/parse
  main-is:        Parsing.hs
  build-depends:
      core
    , hspec >= 2.5 && < 3
    , hspec-megaparsec >= 2.1 && < 3
    , megaparsec

test-suite evaluation
  import:         stuff
  type:           exitcode-stdio-1.0
  hs-source-dirs: tests/eval
  main-is:        Evaluation.hs
  build-depends:
      core
    , bytestring >= 0.10.8 && < 0.11
    , filepath
    , megaparsec
    , hspec >= 2.5 && < 3
    , unordered-containers

test-suite golden
  import:         stuff
  type:           exitcode-stdio-1.0
  hs-source-dirs: tests/golden
  main-is:        Main.hs
  build-depends:
      core
    , directory >= 1.2.7 && < 1.4
    , shake >= 0.18 && < 0.19
    , tasty >= 1.1.0.3 && < 2.0
    , tasty-golden >= 2.3 && < 2.4
