cabal-version:       2.2
name:                thales
version:             0.3.0.0
license:             MIT
license-file:        LICENSE
author:              Alan Rempel <alan.rempel@gmail.com>
maintainer:          alan.rempel@gmail.com
build-type:          Simple
extra-doc-files:     README.md
tested-with:         GHC == 8.6.5, GHC == 8.8.3
homepage:            https://github.com/parsonyorick/thales-templating
synopsis:            A static site generator with its own templating language
category:            Text
description:
  A static website generator based on a very simple textual templating
  system, reminiscent of Mustache or Jinja2. It has advanced dependency tracking using
  the Shake build system.
  .
  See the README in the source tarball or on GitHub
  (<https://github.com/parsonyorick/thales#readme>) for more info.

source-repository head
  location: https://github.com/parsonyorick/thales
  type: git

common stuff
  build-depends:
      base >= 4.9 && < 4.14
    , relude >= 0.6 && < 0.7
  mixins:
      relude (Relude as Prelude)
    , base hiding (Prelude)
  default-language:    Haskell2010
  default-extensions:
      OverloadedStrings
    , DerivingStrategies
    , GeneralizedNewtypeDeriving
    , StandaloneDeriving
    , DeriveFunctor
    , DeriveGeneric
    , DeriveAnyClass
    , MultiParamTypeClasses
    , RankNTypes
    , LambdaCase
    , GADTs
    , RecordWildCards
    , NamedFieldPuns
    , DefaultSignatures
    , KindSignatures
    , StrictData
    , ScopedTypeVariables
    , TupleSections
    , TypeFamilies
    , FlexibleInstances

executable thales
  import:         stuff
  hs-source-dirs: main
  main-is:        Main.hs
  ghc-options:    -threaded -rtsopts "-with-rtsopts=-I0 -qg"
  build-depends:
      core
    , directory
    , optparse-applicative >= 0.14 && < 0.16
    , parser-combinators
    , shake >= 0.18 && < 0.19
    , text >= 1.2.2 && < 1.3

library core
  import:          stuff
  hs-source-dirs:  sources
  exposed-modules:
      DependencyMonad
    , Bindings
    , Configuration
    , Display
    , Eval
    , Function
    , KnownFunction
    , List
    , NonEmptyText
    , Output
    , Parse
    , Problem
    , Syntax
    , Value
  other-modules:
      Eval.Expr
    , Eval.Statement
  build-depends:
    , applicative-transformers
    , binary >= 0.8.6 && < 0.9
    , binary-instances
    , bytestring >= 0.10.8 && < 0.11
    , containers >= 0.5 && < 0.7
    , directory
    , dlist ^>= 0.8
    , filepath >= 1.4 && < 1.5
    , lucid
    , megaparsec >= 8.0 && < 9.0
    , mmark >= 0.0.7.2 && < 0.0.8
    , modern-uri
    , Only
    , parser-combinators >= 0.4
    , prettyprinter >= 1.3 && < 1.7
    , scientific >= 0.3.5.2 && < 0.4
    , shake >= 0.18 && < 0.19
    , text >= 1.2.2 && < 1.3
    , transformers >= 0.5 && < 0.6
    , unordered-containers
    , vector >= 0.12 && < 0.13
    , yaml >= 0.11.1.2 && < 0.12
  default-extensions:
      QuantifiedConstraints
  other-extensions:
      UndecidableInstances

library applicative-transformers
  hs-source-dirs:   applicative-transformers
  exposed-modules:
      Control.Applicative.Trans.Class
    , Control.Applicative.Trans.Reader
    , Control.Applicative.Trans.Validation
    , Control.Applicative.Trans.Writer
  build-depends:
      base >= 4.8 && < 4.14
    , transformers >= 0.5 && < 0.6
  default-language: Haskell2010

test-suite parsing
  import:         stuff
  type:           exitcode-stdio-1.0
  hs-source-dirs: tests/parse
  main-is:        Parsing.hs
  build-depends:
      core
    , smallcheck >= 1.1.5 && < 1.2
    , tasty >= 1.1.0.3 && < 2.0
    , tasty-smallcheck >= 0.8 && < 0.9
    , text
    , megaparsec
    , prettyprinter
    , scientific
    , vector
  default-extensions:
      QuantifiedConstraints

test-suite golden
  import:         stuff
  type:           exitcode-stdio-1.0
  hs-source-dirs: tests/golden
  main-is:        Main.hs
  build-depends:
      core
    , directory >= 1.2.7 && < 1.4
    , shake >= 0.18 && < 0.19
    , tasty >= 1.1.0.3 && < 2.0
    , tasty-golden >= 2.3 && < 2.4
    , temporary >= 1.2.1 && < 1.4
